# mchact

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOP.md  Dockerfile  NIXPKGS_README.md  README-origin.md  README.md  README_CN.md  SECURITY.md  SOUL.md  SUPPORT.md  TEST.md  build-installer.cmd  check.sh  deny.toml  docker-compose.yaml  flake.nix  install.ps1  install.sh  mchact.config.example.yaml  mcp.example.json  mcp.hapi-bridge.example.json  microclaw.config.example.yaml  start.sh  uninstall.ps1  uninstall.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  extended-ci.yml  nightly-stability.yml  release-assets.yml
crates/mchact-app/: Cargo.toml
crates/mchact-app/src/: builtin_skills.rs  lib.rs  logging.rs
crates/mchact-channels/: Cargo.toml
crates/mchact-channels/src/: channel.rs  delivery.rs  lib.rs
crates/mchact-clawhub/: Cargo.toml
crates/mchact-clawhub/src/: client.rs  install.rs  lockfile.rs  types.rs
crates/mchact-core/: Cargo.toml
crates/mchact-core/src/: error.rs  lib.rs
crates/mchact-media/: Cargo.toml
crates/mchact-media/src/: documents.rs  image_gen_openai.rs  lib.rs  stt.rs  (+5 more)
crates/mchact-memory/: Cargo.toml
crates/mchact-memory/src/: dag.rs  deriver.rs  dreamer.rs  injection.rs  lib.rs  migration.rs  quality.rs  queue.rs  search.rs  types.rs
crates/mchact-memory/src/driver/: mod.rs  postgres.rs  sqlite.rs
crates/mchact-memory/src/schema/: postgres.sql  sqlite.sql
crates/mchact-memory/tests/: sqlite_integration.rs
crates/mchact-observability/: Cargo.toml
crates/mchact-observability/src/: lib.rs  logs.rs  metrics.rs  sdk.rs  traces.rs
crates/mchact-observability/src/adapters/: agentops.rs  langfuse.rs  mod.rs
crates/mchact-storage/: Cargo.toml
crates/mchact-storage-backend/: Cargo.toml
crates/mchact-storage-backend/src/: azure.rs  cache.rs  gcs.rs  lib.rs  local.rs  s3.rs
crates/mchact-storage/src/: db.rs  fts.rs  lib.rs  memory.rs  usage.rs
crates/mchact-storage/src/db/: audit.rs  auth.rs  chat.rs  document.rs  knowledge.rs  media.rs  memory_db.rs  message.rs  metrics.rs  mod.rs  session.rs  subagent.rs  task.rs  types.rs
crates/mchact-storage/src/driver/: mod.rs  postgres.rs
crates/mchact-storage/src/driver/postgres/: audit.rs  auth.rs  chat.rs  document.rs  knowledge.rs  media.rs  memory_db.rs  message.rs  metrics.rs  mod.rs  session.rs  subagent.rs  task.rs
crates/mchact-storage/src/schema/: postgres.sql  sqlite.sql
crates/mchact-storage/src/traits/: audit.rs  auth.rs  chat.rs  document.rs  knowledge.rs  media.rs  memory.rs  message.rs  metrics.rs  mod.rs  session.rs  subagent.rs  task.rs
crates/mchact-tools/: Cargo.toml
crates/mchact-tools/src/: lib.rs  path_guard.rs  runtime.rs  sandbox.rs  todo_store.rs  web_content_validation.rs  web_fetch.rs  web_html.rs  web_search.rs
crates/microclaw-core/: Cargo.toml
crates/microclaw-media/: Cargo.toml
crates/microclaw-media/src/: image_gen.rs  image_gen_fal.rs  stt_openai.rs  tts.rs  tts_openai.rs  video_gen.rs  video_gen_fal.rs  video_gen_sora.rs
crates/microclaw-observability/: Cargo.toml
crates/microclaw-storage/: Cargo.toml
docs/: a2a.md  llm-provider-conventions.md  mcp-sdk-evaluation.md
docs/clawhub/: overview.md
docs/hooks/: HOOK.md
docs/new/: source-comparison.md
docs/observability/: architecture.md  metrics.md
docs/operations/: acp-stdio.md  hapi-bridge.md  http-hook-trigger.md  runbook.md  stability-plan-2026-q1.md  weixin.md  windows-service.md
docs/plugins/: overview.md
docs/releases/: nixpkgs-upstream-guide.md  pr-release-checklist.md  release-policy.md  upgrade-guide.md
docs/reports/: sandbox-comparison-openclaw-nanoclaw-zeroclaw-2026-03.md
docs/rfcs/: 0001-authn-authz-model.md  0002-hooks-event-model.md  0003-session-fork-model.md  0004-metrics-naming.md  0005-subagents-runtime-v1.md  README.md
docs/roadmap/: feature-completion-pr-plan.md  stability-tracking-board-2026-q1.md
docs/roadmaps/: sandbox-adoption-plan-2026-02.md
docs/security/: execution-model.md
docs/test/: blackbox-core-20-cases.md
examples/plugins/: README.md
packaging/windows/: mchact.iss  microclaw.iss
scripts/: build_windows_installer.ps1  generate_docs_artifacts.mjs  matrix-smoke-test.sh  release_finalize.sh  release_homebrew.sh  test_http_hooks.sh  update-nixpkgs.sh
scripts/ci/: nightly_stability.sh  stability_smoke.sh
src/: a2a.rs  acp.rs  acp_subagent.rs  agent_engine.rs  batch.rs  batch_worker.rs  chat_commands.rs  codex_auth.rs  compressor.rs  config.rs  distributions.rs  doctor.rs  embedding.rs  export.rs  gateway.rs  hooks.rs  http_client.rs  knowledge.rs  knowledge_scheduler.rs  lib.rs  llm.rs  main.rs  mcp.rs  media_manager.rs  memory_backend.rs  memory_service.rs  plugins.rs  rl.rs  runtime.rs  scheduler.rs  setup.rs  skills.rs  train_pipeline.rs  web.rs
src/channels/: dingtalk.rs  discord.rs  email.rs  feishu.rs  imessage.rs  irc.rs  matrix.rs  nostr.rs  qq.rs  signal.rs  slack.rs  telegram.rs  weixin.rs  whatsapp.rs
src/clawhub/: cli.rs  mod.rs  service.rs  tools.rs
src/parsers/: deepseek.rs  glm.rs  hermes.rs  kimi.rs  llama.rs  mistral.rs  mod.rs  qwen_coder.rs
src/tools/: a2a.rs  activate_skill.rs  bash.rs  browser.rs  browser_vision.rs  create_skill.rs  edit_file.rs  export_chat.rs  findings.rs  glob.rs  grep.rs  image_generate.rs  knowledge.rs  mcp.rs  memory.rs  mixture_of_agents.rs  mod.rs  read_document.rs  read_file.rs  rl_training.rs  schedule.rs  send_message.rs  session_search.rs  structured_memory.rs  subagents.rs  sync_skills.rs  text_to_speech.rs  time_math.rs  todo.rs  training.rs  video_generate.rs  web_fetch.rs  web_search.rs  write_file.rs
src/web/: auth.rs  config.rs  mcp.rs  metrics.rs  middleware.rs  sessions.rs  stream.rs  ws.rs
tests/: config_validation.rs  db_integration.rs  tool_permissions.rs
training/: compress.py  distributions.yaml  requirements.txt
training/environments/: swe.py  terminal_tasks.py  web_research.py
web/: index.html  package-lock.json  package.json
web/src/: main.tsx
(+94 files in other folders)
