[package]
name = "mchact-memory"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite", "dep:sqlite-vec"]
postgres = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rusqlite = { version = "0.37", optional = true }
sqlite-vec = { version = "0.1.8-alpha.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
