[package]
name = "mchact-memory"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite", "dep:sqlite-vec"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:pgvector"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rusqlite = { version = "0.37", optional = true }
sqlite-vec = { version = "0.1.8-alpha.1", optional = true }
shellexpand = "3.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
pgvector = { version = "0.4", features = ["postgres"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
