[package]
name = "mchact-storage-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["local"]
local = []
s3 = ["aws-sdk-s3", "aws-config"]
azure = ["azure_storage_blobs", "azure_storage", "azure_core", "futures"]
gcs = ["google-cloud-storage"]

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
azure_storage_blobs = { version = "0.21", optional = true }
azure_storage = { version = "0.21", optional = true }
azure_core = { version = "0.21", optional = true }
futures = { version = "0.3", optional = true }
google-cloud-storage = { version = "0.22", optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
