[package]
name = "mchact-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["sqlite"]
sqlite = []
sqlite-vec = ["sqlite", "dep:sqlite-vec"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
mchact-core = { version = "0.1.0", path = "../mchact-core" }
mchact-storage-backend = { version = "0.1.0", path = "../mchact-storage-backend" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
sqlite-vec = { version = "0.1.8-alpha.1", optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
deadpool-postgres = { version = "0.14", optional = true }
