[package]
name = "mchact-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
mchact-core = { version = "0.1.0", path = "../mchact-core" }
mchact-storage-backend = { version = "0.1.0", path = "../mchact-storage-backend" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
urlencoding = "2"
regex = "1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
