[package]
name = "microclaw-media"
version = "0.1.0"
edition = "2021"

[features]
default = []
tts = ["msedge-tts", "opus", "ogg"]
stt-local = ["whisper-rs"]
documents = ["kreuzberg"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
infer = "0.19"
tempfile = "3"
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"

# TTS
msedge-tts = { version = "0.3", optional = true }
opus = { version = "0.3", optional = true }
ogg = { version = "0.9", optional = true }

# STT local
whisper-rs = { version = "0.16", optional = true }

# Documents
kreuzberg = { version = "4.6", features = ["pdf", "office", "html"], optional = true }
